# jv

./: .gitignore  Makefile  gatsby-browser.js  gatsby-config.js  gatsby-node.js  go.mod  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  (+1 more)
blog/: .eslintrc.json  gatsby-config.js  gatsby-node.js  package-lock.json  package.json
coach-mcp/: package.json  tsconfig.json  wrangler.jsonc
command-center/: .gitignore  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
command-center-mcp/: .gitignore  package.json  wrangler.jsonc
gatsby-blog/: gatsby-config.js  package-lock.json
gatsby-starter-verrone/: .gitignore  gatsby-config.js  package-lock.json
johnandmolly/: bun.lockb  next.config.js  package-lock.json  package.json  tailwind.config.ts
johnverrone/: .gitignore  eslint.config.js  fullstory-script.js  next.config.js  package-lock.json  package.json  subtext-setup-report.md  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
jolly-blog/: .eslintrc.json  .gitignore  README.md  gatsby-config.js  gatsby-node.js  next.config.js  package-lock.json  package.json  tsconfig.json
music-2025/: package.json  pnpm-lock.yaml
rustgame/: .gitignore  Cargo.toml  build-wasm.sh
rustgame/data/: coffees.json
rustgame/src/: baked_label.rs  biosphere.rs  camera.rs  coffee.rs  input.rs  interaction.rs  lib.rs  main.rs  notes.rs  player.rs  world.rs
wedding/: .gitignore  INVITES.json  bun.lockb  next.config.js  package-lock.json  package.json  tsconfig.json
(+592 files in other folders)
