[package]
name = "rustgame"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `jpeg` enables runtime JPEG decoding for the coffee photos baked into the
# binary (Bevy 0.18 omits it from default features).
bevy = { version = "0.18", features = ["jpeg", "touch"] }
avian3d = "0.6"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
# `ab_glyph` rasterizes glyphs from a TTF/OTF font to alpha bitmaps. We bake
# each in-world label to an `Image` once at startup and render it as a
# textured quad, avoiding Bevy's UI-text re-rasterization on every change.
ab_glyph = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18", features = ["webgpu", "webgl2", "jpeg", "touch"] }
web-sys = { version = "0.3", features = ["Window"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Shrink the deployed WASM; `strip` drops ~100MB of DWARF (Vercel's per-file cap).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
